--- a/booking-service/src/main/resources/application.yml
+++ b/booking-service/src/main/resources/application.yml
@@ -1,12 +1,5 @@
 server:
-  port: 8090
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka
-    fetch-registry: true
-    register-with-eureka: true
+  port: 8005
 
 spring:
   application:
@@ -21,3 +14,6 @@ spring:
       ddl-auto: create
     show-sql: true
 
+room:
+  service:
+    url: http://localhost:8001/api/rooms
