--- a/booking-service/src/main/resources/application.yml
+++ b/booking-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8090
+  port: 8005
 
 eureka:
   client:
@@ -21,3 +21,13 @@ spring:
       ddl-auto: create
     show-sql: true
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - shutdown
+        - health
+  endpoint:
+    shutdown:
+      access: unrestricted 
