--- a/roomservice/src/main/resources/application.yml
+++ b/roomservice/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8085
+  port: 8001
 
 eureka:
   client:
@@ -7,6 +7,11 @@ eureka:
       defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka
     register-with-eureka: true
     fetch-registry: true
+  
+  # Below setting only for testing
+  instance:
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 10
 
 spring:
   application:
@@ -23,3 +28,14 @@ spring:
   h2:
     console:
       enabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - shutdown
+        - health
+  endpoint:
+    shutdown:
+      access: unrestricted
