--- a/roomservice/src/main/resources/application.yml
+++ b/roomservice/src/main/resources/application.yml
@@ -7,11 +7,12 @@ eureka:
       defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka
     register-with-eureka: true
     fetch-registry: true
-  
+
   # Below setting only for testing
   instance:
     lease-renewal-interval-in-seconds: 5
     lease-expiration-duration-in-seconds: 10
+    prefer-ip-address: true
 
 spring:
   application:
@@ -20,7 +21,7 @@ spring:
     url: jdbc:h2:mem:roomsdb
     driver-class-name: org.h2.Driver
     username: sa
-    password: 
+    password:
   jpa:
     hibernate:
       ddl-auto: create
@@ -34,8 +35,8 @@ management:
     web:
       exposure:
         include:
-        - shutdown
-        - health
+          - shutdown
+          - health
   endpoint:
     shutdown:
       access: unrestricted
