--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -7,11 +7,16 @@ eureka:
       defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka
     fetch-registry: true
     register-with-eureka: true
+  # Optional
+  instance:
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 10
+    prefer-ip-address: true
 
 spring:
   application:
     name: api-gateway
-  # MOVED TO JAVA CONFIG. 
+  # MOVED TO JAVA CONFIG.
   # cloud:
   #   gateway:
   #     server:
@@ -36,7 +41,3 @@ spring:
   #             uri: http://${EUREKA_HOST:localhost}:8761
   #             predicates:
   #               - Path=/eureka/**,/lastn/**
-
-
-
-
